objects/ssot__MarketingJourneyActivityRun__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Marketing Journey Activity Run Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketingJourneyActivityId__c</fullName>
        <label>Marketing Journey Activity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketingJourneyId__c</fullName>
        <label>Marketing Journey Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionDateTime__c</fullName>
        <label>Transaction DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1748836587345_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MarketingJourneyActivityRun_Individu_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>MarketingJourneyActivityRun_Individu_rel</relationshipLabel>
        <relationshipName>rel_1748836587345_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1750351953131_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MarketingJourneyActivityRun_Marketin_rel</label>
        <referenceTo>ssot__MarketingJourneyActivity__dlm</referenceTo>
        <relationshipLabel>MarketingJourneyActivityRun_Marketin_rel</relationshipLabel>
        <relationshipName>rel_1750351953131_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1750351959329_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MarketingJourneyActivityRun_Marketin_rel</label>
        <referenceTo>ssot__MarketingJourney__dlm</referenceTo>
        <relationshipLabel>MarketingJourneyActivityRun_Marketin_rel</relationshipLabel>
        <relationshipName>rel_1750351959329_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>